# IqraTUI

./: Cargo.toml  README.md  config.example.toml
src/: lib.rs  main.rs
src/api/: audio.rs  mod.rs  quran.rs  salah.rs
src/config/: keybindings.rs  mod.rs
src/core/: models.rs  service.rs
src/icons/: mod.rs
src/salah/: mod.rs
src/storage/: db.rs
src/theme/: mod.rs
src/tts/: mod.rs
src/ui/: app.rs  event.rs  mod.rs  render.rs
src/ui/widgets/: help.rs  mod.rs  status_bar.rs  surah_list.rs
