[package]
name = "iqra-tui"
version = "0.1.0"
edition = "2024"
default-run = "iqra"

[[bin]]
name = "iqra"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rodio = "0.20"
anyhow = "1"
thiserror = "2"
